# bennin-test

./: CMakeLists.txt  server.py
.github/workflows/: ci-build.yml  test-app.yml
cmake/: CompileOptions.cmake
src/: main.cpp
src/beacon/: Beacon.cpp  Beacon.h  Task.h  TaskDispatcher.cpp  TaskDispatcher.h
src/capture/: Keylogger.cpp  Screenshot.cpp  Webcam.cpp  Webcam.h
src/core/: Config.h  ImplantId.cpp  ImplantId.h
src/credential/: ChromiumStealer.cpp  FirefoxStealer.cpp  LsassDumper.cpp
src/crypto/: AesGcm.cpp  AesGcm.h
src/decoy/: BSOD.cpp
src/evasion/: Injector.cpp  NtStructs.h  SyscallStub.asm  Syscalls.h  Unhooker.cpp
src/execution/: DotNetExecutor.cpp
src/fs/: FileSystem.cpp
src/http/: RedirectorResolver.cpp  RedirectorResolver.h  WinHttpClient.cpp  WinHttpClient.h
src/lateral/: BluetoothLateral.cpp  BluetoothLateral.h  WirelessSpread.cpp  WmiExec.cpp
src/modules/: Lateral.cpp
src/network/: SocksProxy.cpp
src/persistence/: ComHijacker.cpp  Persistence.cpp  WmiPersistence.cpp
src/recon/: DeepRecon.cpp  InstalledSoftware.cpp  SysInfo.cpp  WmiHelpers.cpp  WmiHelpers.h
src/shell/: InteractiveShell.cpp
src/streaming/: Streamer.cpp  Streamer.h
src/utils/: Cleanup.cpp  Logger.cpp  Logger.h  SelfDelete.cpp  Shared.cpp  Shared.h
src/wifi/: WifiDumper.cpp
tests/: AesGcmTest.cpp  Base64Test.cpp
